Danger improvement