@@ -69,6 +69,12 @@ task runGPBase(type: Exec) {
     dependsOn 'copyBase'
 }
 
+task runGPBaseDiamond(type: Exec) {
+    workingDir "$robotcode_home"
+    commandLine 'java', '-Xmx512M', '-cp', 'libs/*', '-XX:+IgnoreUnrecognizedVMOptions', '--add-opens=java.base/sun.net.www.protocol.jar=ALL-UNNAMED', '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED', '--add-opens=java.desktop/sun.awt=ALL-UNNAMED', 'robocode.Robocode', '-battle', 'battles/GPBaseDiamond.battle'
+    dependsOn 'copyBase'
+}
+
 task runGP(type: Exec) {
     commandLine 'java',  '-cp', "$robotcode_home/libs/*", 'gprobot.RunGP'
     dependsOn 'copyLib'
